--- a/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
@@ -28,7 +28,7 @@ COM_KUNENA_STATS_GEN_STATS="إحصائيات عامة"
 COM_KUNENA_TRASH_AUTHOR_USERID="هوية المستخدم"
 COM_KUNENA_TRASH_IP="IP"
 COM_KUNENA_TRASH_VIEW=" سلة المحذوفات"
-COM_KUNENA_USRL_USERNAME="الاسم"
+COM_KUNENA_USRL_USERNAME="إسم المستخدم"
 COM_KUNENA_FIELD_LABEL_SEARCH="ابحث"
 COM_KUNENA_FIELD_LABEL_SEARCHIN="البحث في"
 COM_KUNENA_FIELD_LABEL_ON="اون"
@@ -112,7 +112,7 @@ COM_KUNENA_MENU_DESC_CONFIGURATION="الإعدادات العامه"
 
 COM_KUNENA_ADMIN_CONFIG_EXTRA="إعدادات اضافية"
 COM_KUNENA_ADMIN_CONFIG_PUBPROFILE="السماح للزوار لرؤية الملف الشخصي للعضو"
-COM_KUNENA_ADMIN_CONFIG_PUBPROFILE_DESC="اختر<em>نعم</em> للسماح للزوار لرؤية الملف الشخصي للعضو ."
+COM_KUNENA_ADMIN_CONFIG_PUBPROFILE_DESC="اختر<em>نعم</em> للسماح للزوار رؤية الملف الشخصي للعضو ."
 COM_KUNENA_ADMIN_CONFIG_USERLIST="قائمة المستخدمين"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ALLOWED="السماح للزوار لرؤية قائمة المستخدمين"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ALLOWED_DESC="اختر<em>نعم</em>للسماح للزوار لرؤية قائمة المستخدمين."
@@ -120,17 +120,17 @@ COM_KUNENA_ADMIN_CONFIG_USERLIST_AVATAR="عرض الصورة الرمزية"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_EMAIL="عرض البريد الالكتروني"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_EMAIL_DESC="أختر لا إذا كنت لا تريد عرض  عنوان البريد الإلكتروني للمستخدم حتى للمستخدمين المسجلين."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS="عرض عدد مشاهدات البيانات الشخصية"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS_DESC="Set to <em>Yes</em> if you want to display how often the profile was shown."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS_DESC="تعيين <em> نعم </em> إذا كنت ترغب في عرض عدد المرات التي تظهر في الملف الشخصي."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE="عرض تاريخ الانضمام"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE_DESC="Set to <em>Yes</em> if you want to display the date where the user registered."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE_DESC="تعيين <em>نعم</em>إذا كنت ترغب في عرض التاريخ الذي قام فيه المستخدم بالتسجيل."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA="عرض السمعة"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA_DESC="Set you <em>Yes</em> if you want to display the Karma indicator"
+COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA_DESC="تعيين <em>نعم</em>إذا كنت ترغب في عرض مؤشر السمعة"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE="عرض تاريخ آخر تسجيل دخول"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="Set to <em>Yes</em> if you want to display the last time the user was logged in."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="تعيين <em>نعم</em>إذا كنت ترغب في عرض آخر مرة تم فيها تسجيل الخول للمستخدم."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME="عرض الاسم الحقيقي"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME_DESC="Set to <em>Yes</em> if you want to display the real name."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME_DESC="تعيين <em>نعم</em> إذا كنت ترغب في عرض الإسم الحقيقي."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS="عرض عدد المشاركات"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS_DESC="Set to <em>Yes</em> if you want to display the number of posts the user made."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS_DESC="تعيين <em>نعم</em> إذا كنت ترغب في عرض عدد مشاركات المستخدم."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ROWS="عدد الصفوف لقائمة المستخدمين"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ROWS_DESC="عدد الصفوف المعروضة لقائمة المستخدمين"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_USERLIST_AVATAR_DESC="Set to <em>Yes</em> if you want to display the Avatar of the user."
@@ -509,11 +509,11 @@ COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="You need to enter the AppID given on
 ; COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="The Twitter consumer secret to connect to API"
 ; COM_KUNENA_ADMIN_CONFIG_MAX_LINKS="Max Links in message"
 ; COM_KUNENA_ADMIN_CONFIG_MAX_LINKS_DESC="Enter here the max links in a message to prevent spam"
-; COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="Display Captcha for :"
-; COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completely"
-; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Nobody"
-; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
-; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Guests Users And Registered Users"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="عرض كلمة التحقق لــ:"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="اختيار ما إذا كان الضيوف أو المستخدمين المسجلين يمكنهم رؤية كلمة التحقق أو لا أحد لتعطيلها تماما."
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="لا أحد"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="المستخدمين المسجلين"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="المستخدمين الضيوف والمستخدمين المسجلين"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
@@ -705,7 +705,7 @@ COM_KUNENA_C_PRUNETABDESC="حذف المواضيع القديمة (قابلة ل
 COM_KUNENA_C_SYNCEUSERSDESC="مزامنة جدول المستخدمين لكونينا مع مجدول المستخدمين لجمله"
 COM_KUNENA_GIT_INSTALL="Git تثبيت"
 COM_KUNENA_RECOUNTFORUMS="تصفير عداد احصائيات الأقسام الفرعية"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="Uninstall Kunena"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="إلغاء تثبيت كونينا"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/menu.php
 
@@ -847,8 +847,8 @@ COM_KUNENA_USERS_LABEL_ENABLED="مفعل"
 COM_KUNENA_USERS_LABEL_BLOCKED="مسدود"
 COM_KUNENA_USERS_LABEL_BANNED="محظور"
 COM_KUNENA_USERS_LABEL_NOT_BANNED="لم يتم الحظر"
-; COM_KUNENA_REMOVE_CATSUBSCRIPTIONS="Delete all category subscriptions"
-; COM_KUNENA_REMOVE_TOPICSUBSCRIPTIONS="Delete all topic subscriptions"
+COM_KUNENA_REMOVE_CATSUBSCRIPTIONS="حذف كافة اشتراكات الفئة"
+COM_KUNENA_REMOVE_TOPICSUBSCRIPTIONS="حذف كافة اشتراكات الموضوع"
 
 ; JROOT/administrator/components/com_kunena/views/user/tmpl/edit.php
 
@@ -904,19 +904,19 @@ COM_KUNENA_DIAGNOSTICS_LABEL_DELETE_BROKEN_ITEMS="حذف العناصر الغي
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/uninstall.php
 
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Uninstall Kunena"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="WARNING!"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Proceed with caution. This action is irreversible and will permanently delete this Kunena installation."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="All user data in the database including categories, topics, messages, and attachments will be deleted. Kunena installation directories will be removed from you Joomla install including the Kunena Site Component, Kunena Administrator Component, and Kunena Library. If you don't have a backup there is no way to go back and restore this data."
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="In order to execute the process, you need to log in with a super-administrator account. If you have Two-Factor Authentication enabled you may need to include the authenticator code to proceed."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="إلغاء تثبيت كونينا"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="تحذير!"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="قم بالعملية بحذر. هذه العملية لا رجعة فيها وسيتم حذف تثبيت كونينا بشكل دائم."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="سيتم حذف جميع بيانات المستخدم في قاعدة البيانات بما في ذلك فئات والمواضيع والرسائل والمرفقات. سيتم إزالة دلائل التثبيت لكونينا من جملة بما في ذلك مكون كونينا للموقع، مكون كونينا للإدارة، ومكتبة كونينا. إذا لم يكن لديك نسخة احتياطية لا توجد وسيلة للعودة واستعادة هذه البيانات."
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="من أجل تنفيذ هذه العملية، تحتاج إلى تسجيل الدخول باستخدام حساب المدير- الفائق. إذا كان لديك تمكين لعاملين للمصادقة قد تحتاج إلى تضمين رمز التوثيق لإكمال العملية."
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_LOGIN="الاسم"
 COM_KUNENA_TOOLS_LABEL_UNINSTALL_PASSWORD="كلمة المرور"
-; COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="Execute the process"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="Secret key"
+COM_KUNENA_TOOLS_BUTTON_UNINSTALL_PROCESS="تنفيذ العملية"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_SECRETKEY="المفتاح السري"
 
 ; Removed strings
 
 COM_KUNENA_TRASH_LAST_MESSAGE="اخر مشاركة"
 
 ; Temp Beta strings
-; COM_KUNENA_FEATURE_NOT_AVAILABLE_IN_BETA="This feature is disabled in this beta"
+COM_KUNENA_FEATURE_NOT_AVAILABLE_IN_BETA="تم تعطيل هذه الميزة في هذه النسخة البيتا."
