--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.controllers.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.controllers.ini
@@ -103,13 +103,13 @@ COM_KUNENA_SYNC_USERS_DELETE_DONE="%s perfis de utilizadores foram removidos"
 COM_KUNENA_SYNC_USERS_RENAME_DONE="%s perfis de utilizadores foram atualizados"
 COM_KUNENA_TOOLS_CLEANUP_IP_DONE="%s endereços IP guardados foram removidos."
 COM_KUNENA_TOOLS_CLEANUP_IP_FAILED="Não foi encontrado nenhum endereço IP guardado"
-; COM_KUNENA_AJAX_INIT="Initialising..."
+COM_KUNENA_AJAX_INIT="A iniciar ..."
 ; COM_KUNENA_AJAX_RECOUNT_CONTINUE="Continue on recount..."
 ; COM_KUNENA_AJAX_RECOUNT_WAIT="Recounting forum statistics, please wait!"
-; COM_KUNENA_AJAX_ERROR="An Error Occurred"
-; COM_KUNENA_AJAX_DETAILS_BELOW="Please see more details below."
+COM_KUNENA_AJAX_ERROR="Ocorreu um erro"
+COM_KUNENA_AJAX_DETAILS_BELOW="Por favor, veja mais detalhes abaixo."
 ; COM_KUNENA_AJAX_REQUESTED_RECOUNTED="Requested statistics were recounted."
-; COM_KUNENA_TOOLS_UNINSTALL_LOGIN_FAILED="Login failed to launch uninstall process"
+COM_KUNENA_TOOLS_UNINSTALL_LOGIN_FAILED="Início de sessão falhou para iniciar processo de desinstalação"
 ; COM_KUNENA_TOOLS_UNINSTALL_LOGIN_SECRETKEY_INVALID="The secretkey entered is empty or it's not a number"
 
 ; JROOT/administrator/components/com_kunena/controllers/topicicons.php
