--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
@@ -16,8 +16,8 @@ COM_KUNENA_UNPUBLISHED="Despublicado"
 
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS="Foi banido! Não tem acesso a esta função."
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS_EXPIRY="Está banido até %s"
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="<em>This attachment is hidden for guests.<br />Please log in or register to see it.</em>"
-; COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="<em>This image is hidden for guests.<br />Please log in or register to see it.</em>"
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="<em>Este anexo está oculto para os visitantes. <br />Por favor, inicie sessão ou registe-se para vê-lo.</em>"
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="<em>Esta imagem está oculta para os visitantes. <br />Por favor, inicie sessão ou registe-se para vê-la.</em>"
 
 ; JROOT/administrator/components/com_kunena/libraries/access.php
 
@@ -397,7 +397,7 @@ COM_KUNENA_VIEW_USER="Utilizador"
 COM_KUNENA_VIEW_USER_LINK_TITLE="Ver perfil de %s"
 COM_KUNENA_VIEW_VISITOR="Visitante"
 COM_KUNENA_VIEW_MODERATOR="Moderador"
-; COM_KUNENA_PM_WRITE="Write Private Message"
+COM_KUNENA_PM_WRITE="Escrever Mensagem Privada"
 
 ; JROOT/administrator/components/com_kunena/libraries/view.php
 
