--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
@@ -50,7 +50,7 @@ COM_KUNENA_FILTERACTIVE="Nenhum item para mostrar."
 COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Ferramentas do Fórum"
 COM_KUNENA_FIELD_LABEL_UNPUBLISHED="Despublicado"
 COM_KUNENA_FIELD_LABEL_PUBLISHED="Publicado"
-; COM_KUNENA_FIELD_LABEL_ARCHIVED="Archived"
+COM_KUNENA_FIELD_LABEL_ARCHIVED="Arquivo"
 
 ; JROOT/administrator/components/com_kunena/views/attachments/tmpl/default.php
 
@@ -120,20 +120,20 @@ COM_KUNENA_ADMIN_CONFIG_USERLIST_AVATAR="Exibir Avatar"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_EMAIL="Mostrar email"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_EMAIL_DESC="Selecionar <em>Não</em> se nunca quiser mostrar o endereço de e-mail mesmo para utilizadores registados."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS="Mostrar Acessos ao Perfil"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS_DESC="Set to <em>Yes</em> if you want to display how often the profile was shown."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_HITS_DESC="Selecionar <em>Sim</em> se deseja mostrar quantas vezes o perfil foi exibido."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE="Mostrar Data de Registo"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE_DESC="Set to <em>Yes</em> if you want to display the date where the user registered."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_JOINDATE_DESC="Selecionar <em>Sim</em> se deseja mostrar a data em que o utilizador se registou."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA="Mostrar Carma"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA_DESC="Set you <em>Yes</em> if you want to display the Karma indicator"
+COM_KUNENA_ADMIN_CONFIG_USERLIST_KARMA_DESC="Selecionar <em>Sim</em> se quiser mostrar o indicador de Carma."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE="Exibir data da última visita"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="Set to <em>Yes</em> if you want to display the last time the user was logged in."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_LASTVISITDATE_DESC="Selecionar <em>Sim</em> se quiser mostrar a data da última vez que o utilizador esteve ligado."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME="Mostrar nome verdadeiro"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME_DESC="Set to <em>Yes</em> if you want to display the real name."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_NAME_DESC="Selecionar <em>Sim</em> se quiser mostrar o nome verdadeiro."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS="Mostrar Número de Mensagens"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS_DESC="Set to <em>Yes</em> if you want to display the number of posts the user made."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_POSTS_DESC="Selecionar <em>Sim</em> se quiser ver o número de mensagens que o utilizador fez."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ROWS="Utilizadores por Página"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_ROWS_DESC="Número de linhas na Lista de Utilizadores"
-; COM_KUNENA_ADMIN_CONFIG_USERLIST_USERLIST_AVATAR_DESC="Set to <em>Yes</em> if you want to display the Avatar of the user."
+COM_KUNENA_ADMIN_CONFIG_USERLIST_USERLIST_AVATAR_DESC="Selecionar <em>Sim</em> se quiser mostrar o Avatar do utilizador."
 COM_KUNENA_ADMIN_CONFIG_USERLIST_USERONLINE="Mostrar utilizadores em linha"
 COM_KUNENA_ADMIN_CONFIG_USERLIST_USERONLINE_DESC="Selecionar <em>Sim</em> se quiser mostrar os utilizadores que estão ligados."
 COM_KUNENA_ADMIN_RSS="RSS"
@@ -185,7 +185,7 @@ COM_KUNENA_A_DISEMOTICONS="Desativar emoções"
 COM_KUNENA_A_DISEMOTICONS_DESC="Selecionar <em>Sim</em> para desativar completamente as emoções."
 COM_KUNENA_A_DISPLAY_IMGFILES_TAB_MANAGEMENT_PROFILE="Mostrar separador de perfil para gerir anexos"
 COM_KUNENA_A_DISPLAY_IMGFILES_TAB_MANAGEMENT_PROFILE_DESC="Escolha se deseja exibir no perfil o separador para gerir anexos"
-; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Hide Super Users in user list"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Esconder Super Utilzadores da lista dos membros"
 COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Esconder os Super Utilizadores na lista de utilizadores global?"
 COM_KUNENA_A_DISPLAY_NAME="Exibir o Nome de Utilizador"
 COM_KUNENA_A_DISPLAY_THANKYOU_NUMBERS="Número de agradecimentos a exibir"
@@ -229,7 +229,7 @@ COM_KUNENA_A_IMAGEALLOWEDMIMETYPES_DESC="Especificar aqui quais os tipos de imag
 COM_KUNENA_A_IMAGEALLOWEDTYPES="Tipos de Imagem Permitidos"
 COM_KUNENA_A_IMAGEALLOWEDTYPES_DESC="Especificar aqui qual os tipos de imagens permitidas para envio. Usar a vírgula, <strong>minúsculas</strong> sem espaços.<br />Exemplo: jpg,jpeg,png,gif"
 COM_KUNENA_A_IMAGECHECKMIMETYPES="Verificar os tipos de MIME"
-; COM_KUNENA_A_IMAGECHECKMIMETYPES_DESC="Set to <em>Yes</em> to perform MIME type check"
+COM_KUNENA_A_IMAGECHECKMIMETYPES_DESC="Selecionar sim para fazer a verificação de tipo de MIME"
 COM_KUNENA_A_IMAGE_UPLOAD="Permitir carregamento de imagens"
 COM_KUNENA_A_IMAGE_UPLOAD_DESC="Permitir o carregamento de imagens para todos, para utilizadores registrados, para moderadores, para administradores ou para ninguém"
 COM_KUNENA_A_IMGHEIGHT="Altura Máxima da Imagem"
@@ -416,7 +416,7 @@ COM_KUNENA_COM_A_ORDERING_SYSTEM="Numeração das respostas dentro do tópico"
 COM_KUNENA_COM_A_REPORT="Reportar Mensagens"
 COM_KUNENA_COM_A_REPORT_DESC="Se quiser permitir que os utilizadores reportem qualquer mensagem, selecionar <em>Sim</em>."
 COM_KUNENA_COM_A_REPORT_ORDERING_SYSTEM_DESC="Escolher como é que as mensagens serão numeradas dentro do tópico. Pode mostrar os IDs das mensagens ( #324, #465, #768... ) ou números  incrementais (#1, #2, #3...)"
-; COM_KUNENA_COM_A_SESSIONS_START_TIME_DESC="Show online users since a specific time in seconds."
+COM_KUNENA_COM_A_SESSIONS_START_TIME_DESC="Mostrar utilizadores ativos desde um tempo específico em segundos"
 COM_KUNENA_COM_A_SESSIONS_TYPE_DESC="Mostrar utilizadores ativos com uma configuração específica"
 COM_KUNENA_COM_A_SHOW_TOPICS_FROM_LAST_TIME="Mostrar os tópicos a partir do seguinte momento"
 COM_KUNENA_COM_A_SHOW_TOPICS_FROM_LAST_TIME_DESC="Mostrar os tópicos a partir do seguinte momento"
@@ -469,7 +469,7 @@ COM_KUNENA_SUBSCRIPTIONSCHECKED="Subscrição predefinida?"
 COM_KUNENA_SUBSCRIPTIONSCHECKED_DESC="Selecionar <em>Sim</em> se quiser que a opção de subscrição da mensagem esteja ativada por defeito."
 COM_KUNENA_THANKSPOP="Número de Agradecimentos Populares"
 COM_KUNENA_THANKSSTATS="Mostrar as Estatísticas dos Agradecimentos Mais Populares"
-; COM_KUNENA_THANKSSTATSDESC="If you want to show the Popular Thank you, select <em>Yes</em>. "
+COM_KUNENA_THANKSSTATSDESC="Se desejar mostrar as estatísticas dos Agradecimentos Mais Populares, selecionar <em>Sim</em>. "
 COM_KUNENA_TIME_TO_CREATEPAGE="Mostrar tempo de criação da página"
 COM_KUNENA_TIME_TO_CREATEPAGE_DESC="Mostrar tempo para criação da página no rodapé do Kunena"
 COM_KUNENA_USERNUM="Número de Utilizadores Populares"
@@ -482,7 +482,7 @@ COM_KUNENA_VERSION_CHECK_DESC="Selecionar <em>Sim</em> se quiser que o Kunena ve
 COM_KUNENA_A_IP_TRACKING="Rastreando endereço IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Caso defina como <em>Sim</em>, o fórum irá gravar os endereços IPs de cada mensagem colocada (Excluindo mensagens anónimas). Embora este recurso possa ser muito útil na luta contra spam e utilizadores maliciosos. O armazenamento de endereços IPs, sem o consentimento dos utilizadores nos termos e condições do fórum pode ser considerado ilegal em alguns países."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Permitir que os Visitantes vejam as Estatísticas"
-; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to <em>Yes</em> to allow Guests to see Stats link."
+COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Selecionar <em>Sim</em> para permitir que os Visitantes vejam as estatisticas"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Userlist Settings"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="User can report himself"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Set to <em>Yes</em> if you want users can report himself on the messages"
@@ -511,8 +511,8 @@ COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="Precisa de indicar a chave AppID dis
 ; COM_KUNENA_ADMIN_CONFIG_MAX_LINKS_DESC="Enter here the max links in a message to prevent spam"
 ; COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="Display Captcha for :"
 ; COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completely"
-; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Nobody"
-; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Ninguém"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Utilizadores registados "
 ; COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Guests Users And Registered Users"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
@@ -672,7 +672,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_PARAMETERS="Parâmetros"
 COM_KUNENA_A_TEMPLATE_MANAGER_INFO="Informação"
 COM_KUNENA_A_TEMPLATE_MANAGER_BASIC="Configuração Básica"
 ; COM_KUNENA_A_TEMPLATE_MANAGER_FEATURES="Features"
-; COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
+COM_KUNENA_A_TEMPLATE_MANAGER_BBCODE="BBcode"
 COM_KUNENA_A_TEMPLATE_MANAGER_COLORS="Cores"
 COM_KUNENA_A_TEMPLATE_MANAGER_AVATARS="Avatars"
 
@@ -705,7 +705,7 @@ COM_KUNENA_C_PRUNETABDESC="Remover tópicos antigos (configurável)"
 COM_KUNENA_C_SYNCEUSERSDESC="Sincronizar a tabela de utilizadores do Kunena com a tabela de utilizadores do Joomla"
 COM_KUNENA_GIT_INSTALL="Instalação Git"
 COM_KUNENA_RECOUNTFORUMS="Atualizar Estatísticas de Categoria"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="Uninstall Kunena"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_PROCESS="Desinstalar Kunena"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/menu.php
 
@@ -904,8 +904,8 @@ COM_KUNENA_DIAGNOSTICS_LABEL_DELETE_BROKEN_ITEMS="EXCLUIR ITENS DANIFICADOS"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/uninstall.php
 
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Uninstall Kunena"
-; COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="WARNING!"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_TITLE="Desinstalar Kunena"
+COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_WARNING="ATENÇÃO!"
 ; COM_KUNENA_TOOLS_LABEL_UNINSTALL_ALERTBOX_DESC="Proceed with caution. This action is irreversible and will permanently delete this Kunena installation."
 ; COM_KUNENA_TOOLS_LABEL_UNINSTALL_DESC="All user data in the database including categories, topics, messages, and attachments will be deleted. Kunena installation directories will be removed from you Joomla install including the Kunena Site Component, Kunena Administrator Component, and Kunena Library. If you don't have a backup there is no way to go back and restore this data."
 ; COM_KUNENA_TOOLS_LABEL_UNINSTALL_TFA_DESC="In order to execute the process, you need to log in with a super-administrator account. If you have Two-Factor Authentication enabled you may need to include the authenticator code to proceed."
