--- a/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.sys.ini
@@ -33,8 +33,8 @@ COM_KUNENA_XML_DESCRIPTION="منتدى كونينا"
 
 ; JROOT/administrator/components/com_kunena/users/
 
-; COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="All topic subscriptions are deleted"
-; COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="All category subscriptions are deleted"
+COM_KUNENA_USERS_REMOVE_TOPIC_SUBSCRIPTIONS_DONE="تم حذف كافة اشتراكات الموضوع"
+COM_KUNENA_USERS_REMOVE_CAT_SUBSCRIPTIONS_DONE="تم حذف كل اشتراكات القسم"
 
 
 ; JROOT/components/com_kunena/views/**/*.xml
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="حدد عرض"
 COM_KUNENA_MENU_TOPIC_CREATE="انشاء موضوع جديد"
 COM_KUNENA_MENU_TOPIC_EDIT="تعديل الموضوع"
 COM_KUNENA_MENU_TOPIC_REPLY="الرد علي الموضوع"
-; COM_KUNENA_MENU_USERID="UserId"
+COM_KUNENA_MENU_USERID="هوية المستخدم"
 COM_KUNENA_SHOW_12_HOURS="12 ساعة"
 COM_KUNENA_SHOW_24_HOURS="24 ساعة"
 COM_KUNENA_SHOW_48_HOURS="48 ساعة"
@@ -271,8 +271,8 @@ COM_KUNENA_TOPICS_MODE_OPTION_UNAPROVED="مواضيع لم تتم الموافق
 
 ; JROOT/components/com_kunena/views/topics/tmpl/moderator.xml
 
-; COM_KUNENA_MENU_TOPICS_MODERATOR="Moderator Topics"
-; COM_KUNENA_MENU_TOPICS_MODERATOR_DESC="Displays recent topics which haven't been replied by moderators."
+COM_KUNENA_MENU_TOPICS_MODERATOR="مواضيع المشرف"
+COM_KUNENA_MENU_TOPICS_MODERATOR_DESC="عرض المواضيع الأخيرة التي لم يتم الرد عليها من قبل المشرفين."
 
 ; JROOT/components/com_kunena/views/topics/tmpl/posts.xml
 
