--- a/components/com_kunena/admin/language/ar-AA/ar-AA.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.plg_kunena_community.sys.ini
@@ -42,6 +42,6 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="\n\n\n\n\n\n"
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE_ACT="{actor} شكرا لكم علي الموضوع {title}."
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> thanked <a href=\\"_QQ_"%s\\"_QQ_">%s</a> in topic <a href=\\"_QQ_"%s\\"_QQ_">%s</a>"
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TEXT="\n\n\n\n\n\n\n\n\n"
-; PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="thanks user '%s' in the forum message '%s'."
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="تشكرات المستخدم '%s' في مواضيع المنتدى '%s'."
 
 COM_KUNENA_INTEGRATION_TYPE_JOMSOCIAL="JomSocial"
