--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.sys.ini
@@ -301,6 +301,7 @@ COM_KUNENA_TOPICS_MODE_OPTION_POSTED="Posted By Me"
 COM_KUNENA_TOPICS_MODE_OPTION_STARTED="Started By Me"
 COM_KUNENA_TOPICS_MODE_OPTION_PLUGIN="By Plugin"
 COM_KUNENA_TOPICS_MODETYPE_DESC="Header Text (By Plugin only)"
+COM_KUNENA_TOPICS_MODE_OPTION_UNREAD="My Unread Topics"
 
 ; JROOT/components/com_kunena/views/user/metadata.xml
 
