--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -22,6 +22,13 @@ COM_KUNENA_ICON_QUESTION = "Question?"
 COM_KUNENA_ICON_SHOCK = "Shocked"
 COM_KUNENA_ICON_SMILE = "Smiling"
 COM_KUNENA_ICON_SOLVED = "Solved"
+COM_KUNENA_TEMPLATE_LABELS="Show Labels"
+COM_KUNENA_TEMPLATE_LABELS_DESC="Show Labels on topic row"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE="Avatar Type"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Select the Avatar type"
+COM_KUNENA_TEMPLATE_ROUNDED="Rounded"
+COM_KUNENA_TEMPLATE_CIRCLE="Circle"
+COM_KUNENA_TEMPLATE_THUMBNAIL="Thumbnail"
 
 ; JROOT/components/com_kunena/template/
 
