New setting to let choose if the subject of topic can be changed on replies

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -514,6 +514,8 @@ COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered use
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Nobody"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Guests Users And Registered Users"
+COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_LABEL="Allow to let user to change subject on replies"
+COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_DESC="Allow to let user to change subject on replies"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
