--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -288,3 +288,5 @@ COM_KUNENA_GEN_GUEST="<strong>INFO</strong>: You are posting the message as a 'G
 COM_KUNENA_META_PROFILE="%s is on %s. To connect with %s, join %s today."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
+
+COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
