--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -585,7 +585,7 @@ COM_KUNENA_A_RANKS_UPLOAD="Upload New Rank Image"
 
 ; JROOT/administrator/components/com_kunena/views/report/tmpl/default.php
 
-COM_KUNENA_REPORT_SELECT_ALL="Select all"
+COM_KUNENA_REPORT_SELECT_ALL="Select all and copy"
 COM_KUNENA_REPORT_SYSTEM_DESC="The Kunena reporting system helps moderators on the Kunena support forum better understand your setup when you're troubleshooting. Paste the contents of this field in your post when requesting help on the support forum."
 
 ; JROOT/administrator/components/com_kunena/views/smilies/tmpl/
