--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -285,6 +285,8 @@ COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
 COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
 COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
 
 ; Removed strings
 
