--- a/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -287,6 +287,18 @@ COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and 
 COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
 COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
 COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
+COM_KUNENA_CLASSIC="Classic"
+COM_KUNENA_FLAT="Flat"
+COM_KUNENA_MINIMA="Minima"
+COM_KUNENA_PLAIN="Plain"
+COM_KUNENA_ACCESS_ALLOWED="Allowed:"
+COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
+COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
 
 ; Removed strings
 
