--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -1,4 +1,4 @@
-; Kunena Forum translation
+﻿; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -516,6 +516,8 @@ COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Guests Users And Registered Users"
 COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_LABEL="Allow to let user to change subject on replies"
 COM_KUNENA_ALLOW_CHANGE_SUBJECT_REPLIES_DESC="Allow to let user to change subject on replies"
+COM_KUNENA_A_BOARD_READONLY="Read Only Mode"
+COM_KUNENA_A_BOARD_READONLY_DESC="Allow users only to read messages"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
