--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -376,6 +376,7 @@ COM_KUNENA_MODERATION_ERROR_NOT_MODERATOR="You need to be moderator in order to 
 ; JROOT/administrator/components/com_kunena/libraries/user/user.php
 
 COM_KUNENA_MYPROFILE_AIM="AIM"
+COM_KUNENA_MYPROFILE_APPLE="Apple"
 COM_KUNENA_MYPROFILE_BEBO="Bebo"
 COM_KUNENA_MYPROFILE_BLOGSPOT="Blogger"
 COM_KUNENA_MYPROFILE_DELICIOUS="Delicious"
@@ -384,14 +385,21 @@ COM_KUNENA_MYPROFILE_EMAIL="E-Mail"
 COM_KUNENA_MYPROFILE_FACEBOOK="Facebook"
 COM_KUNENA_MYPROFILE_FLICKR="Flickr"
 COM_KUNENA_MYPROFILE_FRIENDFEED="FriendFeed"
-COM_KUNENA_MYPROFILE_GTALK="GTALK"
+COM_KUNENA_MYPROFILE_GOOGLE="Google"
 COM_KUNENA_MYPROFILE_ICQ="ICQ"
+COM_KUNENA_MYPROFILE_INSTGRAM="Istagram"
 COM_KUNENA_MYPROFILE_LINKEDIN="Linkedin"
-COM_KUNENA_MYPROFILE_MSN="MSN"
+COM_KUNENA_MYPROFILE_MICROSOFT="Microsoft"
 COM_KUNENA_MYPROFILE_MYSPACE="MySpace"
 COM_KUNENA_MYPROFILE_SKYPE="SKYPE"
+COM_KUNENA_MYPROFILE_WEIBO="Weibo"
+COM_KUNENA_MYPROFILE_WECHAT="Wechat"
+COM_KUNENA_MYPROFILE_TELEGRAM="Telegram"
 COM_KUNENA_MYPROFILE_TWITTER="Twitter"
+COM_KUNENA_MYPROFILE_VK="VK"
 COM_KUNENA_MYPROFILE_YIM="YIM"
+COM_KUNENA_MYPROFILE_QQ="QQ"
+COM_KUNENA_MYPROFILE_QZONE="Qzone"
 COM_KUNENA_RANK_ADMINISTRATOR="Admin"
 COM_KUNENA_RANK_BANNED="Banned"
 COM_KUNENA_RANK_MODERATOR="Moderator"
