--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.libraries.ini
@@ -387,7 +387,7 @@ COM_KUNENA_MYPROFILE_FLICKR="Flickr"
 COM_KUNENA_MYPROFILE_FRIENDFEED="FriendFeed"
 COM_KUNENA_MYPROFILE_GOOGLE="Google"
 COM_KUNENA_MYPROFILE_ICQ="ICQ"
-COM_KUNENA_MYPROFILE_INSTGRAM="Istagram"
+COM_KUNENA_MYPROFILE_INSTAGRAM="Instagram"
 COM_KUNENA_MYPROFILE_LINKEDIN="Linkedin"
 COM_KUNENA_MYPROFILE_MICROSOFT="Microsoft"
 COM_KUNENA_MYPROFILE_MYSPACE="MySpace"
