--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -51,6 +51,7 @@ COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Tools"
 COM_KUNENA_FIELD_LABEL_UNPUBLISHED="Unpublished"
 COM_KUNENA_FIELD_LABEL_PUBLISHED="Published"
 COM_KUNENA_FIELD_LABEL_ARCHIVED="Archived"
+COM_KUNENA_GEN_IP="IP"
 
 ; JROOT/administrator/components/com_kunena/views/attachments/tmpl/default.php
 
