--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -574,3 +574,12 @@ COM_KUNENA_TEMPLATE_TABS = "Tabs"
 COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY = "Unsubscribe"
 COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG = "Unsubscribe from category"
 COM_KUNENA_VIEW_CATEGORY_DEFAULT_TOPICS = "Topics In Category"
+
+
+
+; Rating
+COM_KUNENA_TOPIC_RATING_ROCKS="Great"
+COM_KUNENA_TOPIC_RATING_PRETTYGOOD="Good"
+COM_KUNENA_TOPIC_RATING_MEH="Medium"
+COM_KUNENA_TOPIC_RATING_KINDABAD="Bad"
+COM_KUNENA_TOPIC_RATING_SUCKS="Very bad"
