Administrator to manage (edit/change) another user's data #276

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -293,3 +293,4 @@ COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profile not saved"
 COM_KUNENA_PROFILE_SAVE_ERROR="Error on saving profile"
 
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Topics Needing Attention"
+COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
