Small typo in site - com_kunena.ini line 148 #3608

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -145,7 +145,7 @@ COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Control Panel"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Manage Categories"
 COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Enter to Category Manager."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Mark Topics Read"
-COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this categeory as read."
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE = "Subscribe"
 COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG = "Subscribe to this category."
 COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE = "Unsubscribe"
